--- a/.github/workflows/rebuild-shaders.yml
+++ b/.github/workflows/rebuild-shaders.yml
@@ -13,3 +13,5 @@ jobs:
         sudo apt-get install -y libsdl2-dev libsdl2-ttf-dev libasound2-dev libxinerama-dev libxi-dev qt5-default
     - name: Build
       run: make shaders
+
+# xxx
