--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -43,6 +43,7 @@ jobs:
       - name: Install clang
         if: matrix.compiler == 'clang'
         run: sudo apt-get install -y clang
+      - uses: rui314/setup-mold@v1
       - name: Build
         env:
           OVERRIDE_CC: ${{ matrix.cc }}
